Refromatted user core | Updated API documentation
