# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2018_09_25_035500) do
+ActiveRecord::Schema.define(version: 2018_09_27_135932) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -207,10 +207,12 @@ ActiveRecord::Schema.define(version: 2018_09_25_035500) do
     t.string "first_name"
     t.string "last_name"
     t.string "city"
-    t.string "street_address"
     t.string "phone_number"
     t.bigint "verified_by_id"
     t.boolean "verified", default: false
+    t.string "primary_address"
+    t.string "secondary_address"
+    t.string "zip_code"
     t.index ["confirmation_token"], name: "index_users_on_confirmation_token", unique: true
     t.index ["email"], name: "index_users_on_email", unique: true
     t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
